--- a/examples/berry_flower/berry_flower_tutorial.ipynb
+++ b/examples/berry_flower/berry_flower_tutorial.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,74 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'doc_id': '2',\n",
+       "{'data': {'doc_id': '1',\n",
        "  'kind': 'Project',\n",
        "  'key': {'project_id': 'test_project'},\n",
-       "  'relations': {'Experiment': [{'doc_id': '2',\n",
-       "     'kind': 'Experiment',\n",
-       "     'key': {'project_id': 'test_project', 'expt_id': 'test_experiment'},\n",
-       "     'model': [{'is_input': True,\n",
-       "       'structure': {'in_channels': 1,\n",
-       "        'kernel_size': 3,\n",
-       "        'out_channels': 4,\n",
-       "        'padding': 1,\n",
-       "        'stride': 1},\n",
-       "       'l_type': 'Conv2d',\n",
-       "       'activation': 'relu'},\n",
-       "      {'is_input': False, 'l_type': 'Flatten'},\n",
-       "      {'is_input': False,\n",
-       "       'structure': {'bias': True, 'in_features': 4096, 'out_features': 2},\n",
-       "       'l_type': 'Linear',\n",
-       "       'activation': 'softmax'}]}],\n",
-       "   'Run': [{'doc_id': '2',\n",
-       "     'kind': 'Run',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'expt_id': 'test_experiment',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'rounds': 2,\n",
-       "     'epochs': 1,\n",
-       "     'lr': 0.001,\n",
-       "     'lr_decay': 0.1,\n",
-       "     'weight_decay': 0.0,\n",
-       "     'seed': 42,\n",
-       "     'precision_fractional': 5,\n",
-       "     'mu': 0.1,\n",
-       "     'l1_lambda': 0.0,\n",
-       "     'l2_lambda': 0.0,\n",
-       "     'base_lr': 0.0005,\n",
-       "     'max_lr': 0.005,\n",
-       "     'patience': 10,\n",
-       "     'delta': 0.0}],\n",
-       "   'Registration': [{'doc_id': '3',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_1'},\n",
-       "     'role': 'guest'},\n",
-       "    {'doc_id': '4',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'role': 'host'}],\n",
-       "   'Tag': [{'doc_id': '3',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_1'},\n",
-       "     'train': [['non_iid_1']],\n",
-       "     'evaluate': [['edge_test_missing_coecerable_vals']],\n",
-       "     'predict': [['iid_1']]},\n",
-       "    {'doc_id': '4',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'train': [['non_iid_2']],\n",
-       "     'evaluate': [],\n",
-       "     'predict': []}],\n",
+       "  'relations': {'Experiment': [],\n",
+       "   'Run': [],\n",
+       "   'Registration': [],\n",
+       "   'Tag': [],\n",
        "   'Model': [],\n",
        "   'Validation': [],\n",
        "   'Prediction': []},\n",
@@ -199,7 +144,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +181,7 @@
        " 'status': 201,\n",
        " 'method': 'experiments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-22 09:27:15 N',\n",
+       " 'data': {'created_at': '2020-09-25 08:55:21 N',\n",
        "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
        "  'model': [{'activation': 'relu',\n",
        "    'is_input': True,\n",
@@ -254,39 +199,12 @@
        "    'is_input': False,\n",
        "    'l_type': 'Linear',\n",
        "    'structure': {'bias': True, 'in_features': 4096, 'out_features': 1}}],\n",
-       "  'relations': {'Run': [{'algorithm': 'FedProx',\n",
-       "     'base_lr': 0.0005,\n",
-       "     'created_at': '2020-09-22 09:18:17 N',\n",
-       "     'criterion': 'NLLLoss',\n",
-       "     'delta': 0.0,\n",
-       "     'epochs': 1,\n",
-       "     'is_snn': False,\n",
-       "     'key': {'expt_id': 'test_experiment',\n",
-       "      'project_id': 'test_project',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'l1_lambda': 0.0,\n",
-       "     'l2_lambda': 0.0,\n",
-       "     'lr': 0.001,\n",
-       "     'lr_decay': 0.1,\n",
-       "     'lr_scheduler': 'CyclicLR',\n",
-       "     'max_lr': 0.005,\n",
-       "     'mu': 0.1,\n",
-       "     'optimizer': 'SGD',\n",
-       "     'patience': 10,\n",
-       "     'precision_fractional': 5,\n",
-       "     'rounds': 2,\n",
-       "     'seed': 42,\n",
-       "     'weight_decay': 0.0,\n",
-       "     'doc_id': 2,\n",
-       "     'kind': 'Run'}],\n",
-       "   'Model': [],\n",
-       "   'Validation': [],\n",
-       "   'Prediction': []},\n",
-       "  'doc_id': 2,\n",
+       "  'relations': {'Run': [], 'Model': [], 'Validation': [], 'Prediction': []},\n",
+       "  'doc_id': 1,\n",
        "  'kind': 'Experiment'}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'doc_id': '2',\n",
+       "{'data': {'doc_id': '1',\n",
        "  'kind': 'Run',\n",
        "  'key': {'project_id': 'test_project',\n",
        "   'expt_id': 'test_experiment',\n",
@@ -372,7 +290,7 @@
        " 'params': {'project_id': 'test_project', 'expt_id': 'test_experiment'}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,27 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'doc_id': '4',\n",
+       "{'data': {'doc_id': '2',\n",
        "  'kind': 'Participant',\n",
        "  'key': {'participant_id': 'test_participant_2'},\n",
-       "  'relations': {'Registration': [{'doc_id': '4',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'role': 'host'}],\n",
-       "   'Tag': [{'doc_id': '4',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'train': [['non_iid_2']],\n",
-       "     'evaluate': [],\n",
-       "     'predict': []}]},\n",
+       "  'relations': {'Registration': [], 'Tag': []},\n",
        "  'id': 'test_participant_2',\n",
        "  'host': '172.17.0.3',\n",
        "  'port': 8020,\n",
@@ -433,7 +340,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,13 +374,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'doc_id': '4',\n",
+       "{'data': {'doc_id': '2',\n",
        "  'kind': 'Registration',\n",
        "  'key': {'project_id': 'test_project',\n",
        "   'participant_id': 'test_participant_2'},\n",
@@ -494,7 +401,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,19 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'doc_id': '4',\n",
+       "{'data': {'doc_id': '2',\n",
        "  'kind': 'Tag',\n",
        "  'key': {'project_id': 'test_project',\n",
        "   'participant_id': 'test_participant_2'},\n",
-       "  'train': [['non_iid_2']],\n",
-       "  'evaluate': [],\n",
-       "  'predict': []},\n",
+       "  'train': [['train']],\n",
+       "  'evaluate': [['evaluate']],\n",
+       "  'predict': [['predict']]},\n",
        " 'apiVersion': '0.0.1',\n",
        " 'success': 1,\n",
        " 'status': 201,\n",
@@ -543,7 +452,7 @@
        "  'participant_id': 'test_participant_2'}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,18 +461,17 @@
     "driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
     "    participant_id=\"test_participant_1\",\n",
-    "    train=[\n",
-    "        [\"non_iid_1\"], \n",
-    "        #[\"edge_test_misalign\"],\n",
-    "        #[\"edge_test_na_slices\"]\n",
-    "    ],\n",
-    "    evaluate=[[\"edge_test_missing_coecerable_vals\"]]\n",
+    "    train=[[\"train\"]],\n",
+    "    evaluate=[[\"evaluate\"]],\n",
+    "    predict = [[\"predict\"]]\n",
     ")\n",
     "\n",
     "driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
     "    participant_id=\"test_participant_2\",\n",
-    "    train=[[\"non_iid_2\"]]\n",
+    "    train=[[\"train\"]],\n",
+    "    evaluate=[[\"evaluate\"]],\n",
+    "    predict=[[\"predict\"]]\n",
     ")"
    ]
   },
@@ -584,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,30 +503,33 @@
        " 'status': 201,\n",
        " 'method': 'alignments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-22 09:27:39 N',\n",
-       "   'key': {'participant_id': 'test_participant_2',\n",
-       "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': 'dbf276c6fcb511eab96a0242ac110004',\n",
-       "    'registration_id': 'cf6ef3e8fcb511eab1df0242ac110004',\n",
-       "    'tag_id': 'cfd62a9afcb511ea9e610242ac110004'},\n",
-       "   'train': {'X': [], 'y': []},\n",
-       "   'relations': {},\n",
-       "   'doc_id': 3,\n",
-       "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-22 09:27:39 N',\n",
+       " 'data': [{'created_at': '2020-09-25 08:56:35 N',\n",
        "   'evaluate': {'X': [], 'y': []},\n",
        "   'key': {'participant_id': 'test_participant_1',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': 'dbf537a8fcb511eab96a0242ac110004',\n",
-       "    'registration_id': 'cf69b68afcb511ea9f7c0242ac110004',\n",
-       "    'tag_id': 'cfd1fe98fcb511eaa6e10242ac110004'},\n",
+       "   'link': {'alignment_id': '042790a0ff0d11eaaa510242ac110004',\n",
+       "    'registration_id': 'd896346eff0c11eaa6770242ac110004',\n",
+       "    'tag_id': 'd8f4c8b2ff0c11ea922e0242ac110004'},\n",
+       "   'predict': {'X': [], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
-       "   'doc_id': 4,\n",
+       "   'doc_id': 1,\n",
+       "   'kind': 'Alignment'},\n",
+       "  {'created_at': '2020-09-25 08:56:35 N',\n",
+       "   'evaluate': {'X': [], 'y': []},\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
+       "    'project_id': 'test_project'},\n",
+       "   'link': {'alignment_id': '042a4ad4ff0d11eaaa510242ac110004',\n",
+       "    'registration_id': 'd89a4144ff0c11ea9d280242ac110004',\n",
+       "    'tag_id': 'd8f7fa14ff0c11eab5470242ac110004'},\n",
+       "   'predict': {'X': [], 'y': []},\n",
+       "   'train': {'X': [], 'y': []},\n",
+       "   'relations': {},\n",
+       "   'doc_id': 2,\n",
        "   'kind': 'Alignment'}]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
