Notebook Completed - L1Loss

--- a/examples/berry_flower/berry_flower_tutorial.ipynb
+++ b/examples/berry_flower/berry_flower_tutorial.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"red\"> WIP. More in-depth elaboration starting from Phase 1: Connect required</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Running a Federated Cycle with Synergos\n",
     "\n",
     "This tutorial aims to give you an understanding of how to use the synergos package to run a full federated learning cycle. \n",
@@ -79,7 +72,6 @@
     "- worker_2 address: 172.17.0.3\n",
     "- ttp address: 172.17.0.4\n",
     "\n",
-    "<font color=\"red\">Not sure if need to run configure.py</font>\n",
     "\n",
     "Run the following cells below.\n",
     "\n",
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +136,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +173,7 @@
        " 'status': 201,\n",
        " 'method': 'experiments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-25 08:55:21 N',\n",
+       " 'data': {'created_at': '2020-09-27 12:47:50 N',\n",
        "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
        "  'model': [{'activation': 'relu',\n",
        "    'is_input': True,\n",
@@ -204,7 +196,7 @@
        "  'kind': 'Experiment'}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +206,7 @@
     "    project_id=\"test_project\",\n",
     "    expt_id=\"test_experiment\",\n",
     "    model = [\n",
-    "        # Input: N, C, Height, Width [N, 1, 28, 28]\n",
+    "        # Input: N, C, Height, Width [N, 1, dimension, dimension]\n",
     "        {\n",
     "            \"activation\": \"relu\",\n",
     "            \"is_input\": True,\n",
@@ -257,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +282,7 @@
        " 'params': {'project_id': 'test_project', 'expt_id': 'test_experiment'}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +296,7 @@
     "    epochs=1,\n",
     "    base_lr=0.0005,\n",
     "    max_lr=0.005,\n",
-    "    criterion=\"NLLLoss\"\n",
+    "    criterion=\"L1Loss\"\n",
     ")"
    ]
   },
@@ -317,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +332,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +393,7 @@
        " 'params': {}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -452,7 +444,7 @@
        "  'participant_id': 'test_participant_2'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -503,25 +495,25 @@
        " 'status': 201,\n",
        " 'method': 'alignments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-25 08:56:35 N',\n",
+       " 'data': [{'created_at': '2020-09-27 12:49:13 N',\n",
        "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_1',\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '042790a0ff0d11eaaa510242ac110004',\n",
-       "    'registration_id': 'd896346eff0c11eaa6770242ac110004',\n",
-       "    'tag_id': 'd8f4c8b2ff0c11ea922e0242ac110004'},\n",
+       "   'link': {'alignment_id': 'd8bcab4400bf11eb80b30242ac110004',\n",
+       "    'registration_id': 'a71102de00bf11ebb4ae0242ac110004',\n",
+       "    'tag_id': 'a719909800bf11eb8ec10242ac110004'},\n",
        "   'predict': {'X': [], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 1,\n",
        "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-25 08:56:35 N',\n",
+       "  {'created_at': '2020-09-27 12:49:14 N',\n",
        "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_2',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '042a4ad4ff0d11eaaa510242ac110004',\n",
-       "    'registration_id': 'd89a4144ff0c11ea9d280242ac110004',\n",
-       "    'tag_id': 'd8f7fa14ff0c11eab5470242ac110004'},\n",
+       "   'link': {'alignment_id': 'd8bee97c00bf11eb80b30242ac110004',\n",
+       "    'registration_id': 'a70d003a00bf11eb84e60242ac110004',\n",
+       "    'tag_id': 'a7165d6000bf11eb96580242ac110004'},\n",
        "   'predict': {'X': [], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
@@ -529,7 +521,7 @@
        "   'kind': 'Alignment'}]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,20 +549,6 @@
     "    run_id=\"test_run\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2C. Trigger hyperparameter optimisation across the grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -590,12 +568,64 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'message': 'Internal Server Error'}"
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Validation',\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.5, 0.5],\n",
+       "     'roc_auc_score': [0.505, 0.505],\n",
+       "     'pr_auc_score': [0.5499999999999999, 0.7138335704125177],\n",
+       "     'f_score': [0.0, 0.6666666666666666],\n",
+       "     'TPRs': [0.0, 1.0],\n",
+       "     'TNRs': [1.0, 0.0],\n",
+       "     'PPVs': [0.0, 0.5],\n",
+       "     'NPVs': [0.5, 0.0],\n",
+       "     'FPRs': [0.0, 1.0],\n",
+       "     'FNRs': [1.0, 0.0],\n",
+       "     'FDRs': [0.0, 0.5],\n",
+       "     'TPs': [0, 20],\n",
+       "     'TNs': [20, 0],\n",
+       "     'FPs': [0, 20],\n",
+       "     'FNs': [20, 0]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}},\n",
+       "  {'doc_id': '2',\n",
+       "   'kind': 'Validation',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.5, 0.5],\n",
+       "     'roc_auc_score': [0.575, 0.575],\n",
+       "     'pr_auc_score': [0.7875000000000001, 0.7702702702702703],\n",
+       "     'f_score': [0.0, 0.6666666666666666],\n",
+       "     'TPRs': [0.0, 1.0],\n",
+       "     'TNRs': [1.0, 0.0],\n",
+       "     'PPVs': [0.0, 0.5],\n",
+       "     'NPVs': [0.5, 0.0],\n",
+       "     'FPRs': [0.0, 1.0],\n",
+       "     'FNRs': [1.0, 0.0],\n",
+       "     'FDRs': [0.0, 0.5],\n",
+       "     'TPs': [0, 20],\n",
+       "     'TNs': [20, 0],\n",
+       "     'FPs': [0, 20],\n",
+       "     'FNs': [20, 0]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'validations.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run'}}"
       ]
      },
      "execution_count": 10,
@@ -620,25 +650,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Prediction',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'predict': {'statistics': {'accuracy': [0.5, 0.5],\n",
+       "     'roc_auc_score': [0.475, 0.475],\n",
+       "     'pr_auc_score': [0.25, 0.7310897435897437],\n",
+       "     'f_score': [0.0, 0.6666666666666666],\n",
+       "     'TPRs': [0.0, 1.0],\n",
+       "     'TNRs': [1.0, 0.0],\n",
+       "     'PPVs': [0.0, 0.5],\n",
+       "     'NPVs': [0.5, 0.0],\n",
+       "     'FPRs': [0.0, 1.0],\n",
+       "     'FNRs': [1.0, 0.0],\n",
+       "     'FDRs': [0.0, 0.5],\n",
+       "     'TPs': [0, 20],\n",
+       "     'TNs': [20, 0],\n",
+       "     'FPs': [0, 20],\n",
+       "     'FNs': [20, 0]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/predict/inference_statistics_predict.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'predictions.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run',\n",
+       "  'participant_id': 'test_participant_1'}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.predictions.create(\n",
-    "    tags={\"test_project\": [[\"iid_1\"]]},\n",
+    "    tags={\"test_project\": [[\"predict\"]]},\n",
     "    participant_id=\"test_participant_1\",\n",
     "    project_id=\"test_project\",\n",
     "    expt_id=\"test_experiment\",\n",
     "    run_id=\"test_run\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
