--- a/examples/qualitative_bankruptcy/bankruptcy_tutorial.ipynb
+++ b/examples/qualitative_bankruptcy/bankruptcy_tutorial.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"red\"> WIP. More in-depth elaboration starting from Phase 1: Connect required</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Running a Federated Cycle with Synergos\n",
     "\n",
     "This tutorial aims to give you an understanding of how to use the synergos package to run a full federated learning cycle. \n",
@@ -79,7 +72,7 @@
     "- worker_2 address: 172.17.0.3\n",
     "- ttp address: 172.17.0.4\n",
     "\n",
-    "<font color=\"red\">Not sure if need to run configure.py</font>\n",
+    "\n",
     "\n",
     "Run the following cells below.\n",
     "\n",
@@ -181,7 +174,7 @@
        " 'status': 201,\n",
        " 'method': 'experiments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-25 07:31:50 N',\n",
+       " 'data': {'created_at': '2020-09-27 14:57:56 N',\n",
        "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
        "  'model': [{'activation': 'sigmoid',\n",
        "    'is_input': True,\n",
@@ -272,7 +265,7 @@
     "    epochs=1,\n",
     "    base_lr=0.0005,\n",
     "    max_lr=0.005,\n",
-    "    criterion=\"NLLLoss\"\n",
+    "    criterion=\"L1Loss\"\n",
     ")"
    ]
   },
@@ -469,26 +462,26 @@
        " 'status': 201,\n",
        " 'method': 'alignments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-25 07:31:54 N',\n",
-       "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_2',\n",
+       " 'data': [{'created_at': '2020-09-27 14:57:57 N',\n",
+       "   'evaluate': {'X': [7], 'y': []},\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '2f965b92ff0111eab6810242ac110004',\n",
-       "    'registration_id': '2e361b5cff0111eaadab0242ac110004',\n",
-       "    'tag_id': '2e9a7f3eff0111ea87c60242ac110004'},\n",
-       "   'predict': {'X': [], 'y': []},\n",
+       "   'link': {'alignment_id': 'd438b8b200d111eb8c6d0242ac110004',\n",
+       "    'registration_id': 'd3a53e2a00d111ebb40b0242ac110004',\n",
+       "    'tag_id': 'd3afa37e00d111eb9fc10242ac110004'},\n",
+       "   'predict': {'X': [7], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 1,\n",
        "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-25 07:31:54 N',\n",
-       "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_1',\n",
+       "  {'created_at': '2020-09-27 14:57:57 N',\n",
+       "   'evaluate': {'X': [8], 'y': []},\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '2f98463cff0111eab6810242ac110004',\n",
-       "    'registration_id': '2e3276beff0111ea93590242ac110004',\n",
-       "    'tag_id': '2e977b2cff0111eaa3cc0242ac110004'},\n",
-       "   'predict': {'X': [], 'y': []},\n",
+       "   'link': {'alignment_id': 'd43ac22400d111eb8c6d0242ac110004',\n",
+       "    'registration_id': 'd3a935de00d111eb823a0242ac110004',\n",
+       "    'tag_id': 'd3b32e2c00d111eba9560242ac110004'},\n",
+       "   'predict': {'X': [8], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 2,\n",
@@ -541,9 +534,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Validation',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.21428571428571427,\n",
+       "      0.21428571428571427],\n",
+       "     'roc_auc_score': [0.24242424242424246, 0.24242424242424243],\n",
+       "     'pr_auc_score': [0.6575825689462053, 0.14005901505901505],\n",
+       "     'f_score': [0.15384615384615385, 0.26666666666666666],\n",
+       "     'TPRs': [0.09090909090909091, 0.6666666666666666],\n",
+       "     'TNRs': [0.6666666666666666, 0.09090909090909091],\n",
+       "     'PPVs': [0.5, 0.16666666666666666],\n",
+       "     'NPVs': [0.16666666666666666, 0.5],\n",
+       "     'FPRs': [0.3333333333333333, 0.9090909090909091],\n",
+       "     'FNRs': [0.9090909090909091, 0.3333333333333333],\n",
+       "     'FDRs': [0.5, 0.8333333333333334],\n",
+       "     'TPs': [1, 2],\n",
+       "     'TNs': [2, 1],\n",
+       "     'FPs': [1, 10],\n",
+       "     'FNs': [10, 1]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}},\n",
+       "  {'doc_id': '2',\n",
+       "   'kind': 'Validation',\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.6923076923076923,\n",
+       "      0.6923076923076923],\n",
+       "     'roc_auc_score': [0.33333333333333337, 0.3333333333333333],\n",
+       "     'pr_auc_score': [0.4222052253302253, 0.5591149591149591],\n",
+       "     'f_score': [0.0, 0.8181818181818181],\n",
+       "     'TPRs': [0.0, 1.0],\n",
+       "     'TNRs': [1.0, 0.0],\n",
+       "     'PPVs': [0.0, 0.6923076923076923],\n",
+       "     'NPVs': [0.6923076923076923, 0.0],\n",
+       "     'FPRs': [0.0, 1.0],\n",
+       "     'FNRs': [1.0, 0.0],\n",
+       "     'FDRs': [0.0, 0.3076923076923077],\n",
+       "     'TPs': [0, 9],\n",
+       "     'TNs': [9, 0],\n",
+       "     'FPs': [0, 4],\n",
+       "     'FNs': [4, 0]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'validations.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.validations.create(\n",
     "    project_id=\"test_project\",\n",
@@ -561,9 +617,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Prediction',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'predict': {'statistics': {'accuracy': [0.21428571428571427,\n",
+       "      0.21428571428571427],\n",
+       "     'roc_auc_score': [0.24242424242424246, 0.24242424242424243],\n",
+       "     'pr_auc_score': [0.6575825689462053, 0.14005901505901505],\n",
+       "     'f_score': [0.15384615384615385, 0.26666666666666666],\n",
+       "     'TPRs': [0.09090909090909091, 0.6666666666666666],\n",
+       "     'TNRs': [0.6666666666666666, 0.09090909090909091],\n",
+       "     'PPVs': [0.5, 0.16666666666666666],\n",
+       "     'NPVs': [0.16666666666666666, 0.5],\n",
+       "     'FPRs': [0.3333333333333333, 0.9090909090909091],\n",
+       "     'FNRs': [0.9090909090909091, 0.3333333333333333],\n",
+       "     'FDRs': [0.5, 0.8333333333333334],\n",
+       "     'TPs': [1, 2],\n",
+       "     'TNs': [2, 1],\n",
+       "     'FPs': [1, 10],\n",
+       "     'FNs': [10, 1]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/predict/inference_statistics_predict.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'predictions.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run',\n",
+       "  'participant_id': 'test_participant_1'}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.predictions.create(\n",
     "    tags={\"test_project\": [[\"predict\"]]},\n",
@@ -573,13 +670,6 @@
     "    run_id=\"test_run\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
