Update to allow declaration of action

--- a/examples/heart_disease/tutorial.ipynb
+++ b/examples/heart_disease/tutorial.ipynb
@@ -85,6 +85,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from synergos import Driver\n",
+    "\n",
+    "host = \"192.168.1.198\" #\"0.0.0.0\" # Different for Windows users\n",
+    "port = 5000\n",
+    "\n",
+    "# Initiate Driver\n",
+    "driver = Driver(host=host, port=port)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -92,7 +105,7 @@
    "source": [
     "from synergos import Driver\n",
     "\n",
-    "host = \"192.168.1.198\" #\"0.0.0.0\" # Different for Windows users\n",
+    "host = \"localhost\" # Different for Windows users\n",
     "port = 5000\n",
     "\n",
     "# Initiate Driver\n",
@@ -133,6 +146,7 @@
        "   'Model': [],\n",
        "   'Validation': [],\n",
        "   'Prediction': []},\n",
+       "  'action': 'classify',\n",
        "  'incentives': {'tier_3': [], 'tier_2': [], 'tier_1': []}},\n",
        " 'apiVersion': '0.0.1',\n",
        " 'success': 1,\n",
@@ -149,6 +163,7 @@
    "source": [
     "driver.projects.create(\n",
     "    project_id=\"test_project\",\n",
+    "    action=\"classify\",\n",
     "    incentives={\n",
     "        'tier_1': [],\n",
     "        'tier_2': [],\n",
@@ -177,7 +192,7 @@
        " 'status': 201,\n",
        " 'method': 'experiments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-21 05:05:24 N',\n",
+       " 'data': {'created_at': '2020-10-26 10:15:57 N',\n",
        "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
        "  'model': [{'activation': 'sigmoid',\n",
        "    'is_input': True,\n",
@@ -464,23 +479,23 @@
        " 'status': 201,\n",
        " 'method': 'alignments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-21 05:06:22 N',\n",
+       " 'data': [{'created_at': '2020-10-26 10:16:08 N',\n",
        "   'key': {'participant_id': 'test_participant_2',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '3155e876fbc811eaa2d80242ac110004',\n",
-       "    'registration_id': '2d844e40fbc811eabac50242ac110004',\n",
-       "    'tag_id': '2ef57556fbc811eab0540242ac110004'},\n",
+       "   'link': {'alignment_id': '43a4c21e177411ebaae90242ac110004',\n",
+       "    'registration_id': '40b07bde177411ebbbb50242ac110004',\n",
+       "    'tag_id': '41c9e73a177411eba0380242ac110004'},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 1,\n",
        "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-21 05:06:22 N',\n",
+       "  {'created_at': '2020-10-26 10:16:08 N',\n",
        "   'evaluate': {'X': [], 'y': []},\n",
        "   'key': {'participant_id': 'test_participant_1',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '3159d594fbc811eaa2d80242ac110004',\n",
-       "    'registration_id': '2d7f7456fbc811eaafe60242ac110004',\n",
-       "    'tag_id': '2ef093bafbc811eaa27b0242ac110004'},\n",
+       "   'link': {'alignment_id': '43a679ec177411ebaae90242ac110004',\n",
+       "    'registration_id': '40acf234177411ebbd9f0242ac110004',\n",
+       "    'tag_id': '41c707f4177411eb93080242ac110004'},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 2,\n",
@@ -505,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,37 +574,65 @@
        "    'project_id': 'test_project',\n",
        "    'expt_id': 'test_experiment',\n",
        "    'run_id': 'test_run'},\n",
-       "   'evaluate': {'statistics': {'accuracy': [0.5745784695201037,\n",
-       "      0.788586251621271,\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.5058365758754864,\n",
+       "      0.7795071335927367,\n",
+       "      0.7328145265888456,\n",
        "      0.8391699092088197,\n",
-       "      0.8404669260700389,\n",
-       "      0.9571984435797666],\n",
-       "     'roc_auc_score': [0.3381737598414359,\n",
-       "      0.6172909267032612,\n",
-       "      0.43170713466620136,\n",
-       "      0.48496938673090434,\n",
-       "      0.5011907694834524],\n",
-       "     'pr_auc_score': [0.3285151301926826,\n",
-       "      0.2852982632388624,\n",
-       "      0.15274449616481225,\n",
-       "      0.16431373536461735,\n",
-       "      0.044512199525916715],\n",
-       "     'f_score': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
-       "     'PPVs': [0.4254215304798962, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'NPVs': [0.0,\n",
-       "      0.788586251621271,\n",
-       "      0.8391699092088197,\n",
-       "      0.8404669260700389,\n",
-       "      0.9571984435797666],\n",
-       "     'FPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'FNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
-       "     'FDRs': [0.5745784695201037, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TPs': [328, 0, 0, 0, 0],\n",
-       "     'TNs': [0, 608, 647, 648, 738],\n",
-       "     'FPs': [443, 0, 0, 0, 0],\n",
-       "     'FNs': [0, 163, 124, 123, 33]},\n",
+       "      0.2490272373540856],\n",
+       "     'roc_auc_score': [0.18136458734790506,\n",
+       "      0.4112851146270584,\n",
+       "      0.3456897841152715,\n",
+       "      0.5531717354210579,\n",
+       "      0.5288248337028825],\n",
+       "     'pr_auc_score': [0.2769722374256113,\n",
+       "      0.17033734181564716,\n",
+       "      0.11497254785684327,\n",
+       "      0.20903177138896742,\n",
+       "      0.04816693871025879],\n",
+       "     'f_score': [0.020565552699228794,\n",
+       "      0.011627906976744186,\n",
+       "      0.08849557522123894,\n",
+       "      0.0,\n",
+       "      0.08240887480190175],\n",
+       "     'TPRs': [0.012195121951219513,\n",
+       "      0.006134969325153374,\n",
+       "      0.08064516129032258,\n",
+       "      0.0,\n",
+       "      0.7878787878787878],\n",
+       "     'TNRs': [0.871331828442438,\n",
+       "      0.9868421052631579,\n",
+       "      0.8578052550231839,\n",
+       "      0.9984567901234568,\n",
+       "      0.22493224932249323],\n",
+       "     'PPVs': [0.06557377049180328,\n",
+       "      0.1111111111111111,\n",
+       "      0.09803921568627451,\n",
+       "      0.0,\n",
+       "      0.043478260869565216],\n",
+       "     'NPVs': [0.543661971830986,\n",
+       "      0.7874015748031497,\n",
+       "      0.8295964125560538,\n",
+       "      0.8402597402597403,\n",
+       "      0.9595375722543352],\n",
+       "     'FPRs': [0.12866817155756208,\n",
+       "      0.013157894736842105,\n",
+       "      0.14219474497681608,\n",
+       "      0.0015432098765432098,\n",
+       "      0.7750677506775068],\n",
+       "     'FNRs': [0.9878048780487805,\n",
+       "      0.9938650306748467,\n",
+       "      0.9193548387096774,\n",
+       "      1.0,\n",
+       "      0.21212121212121213],\n",
+       "     'FDRs': [0.9344262295081968,\n",
+       "      0.8888888888888888,\n",
+       "      0.9019607843137255,\n",
+       "      1.0,\n",
+       "      0.9565217391304348],\n",
+       "     'TPs': [4, 1, 10, 0, 26],\n",
+       "     'TNs': [386, 600, 555, 647, 166],\n",
+       "     'FPs': [57, 8, 92, 1, 572],\n",
+       "     'FNs': [324, 162, 114, 123, 7]},\n",
        "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}}],\n",
        " 'apiVersion': '0.0.1',\n",
        " 'success': 1,\n",
@@ -600,7 +643,7 @@
        "  'run_id': 'test_run'}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -634,37 +677,65 @@
        "    'project_id': 'test_project',\n",
        "    'expt_id': 'test_experiment',\n",
        "    'run_id': 'test_run'},\n",
-       "   'predict': {'statistics': {'accuracy': [0.5745784695201037,\n",
-       "      0.788586251621271,\n",
+       "   'predict': {'statistics': {'accuracy': [0.5058365758754864,\n",
+       "      0.7795071335927367,\n",
+       "      0.7328145265888456,\n",
        "      0.8391699092088197,\n",
-       "      0.8404669260700389,\n",
-       "      0.9571984435797666],\n",
-       "     'roc_auc_score': [0.3381737598414359,\n",
-       "      0.6172909267032612,\n",
-       "      0.43170713466620136,\n",
-       "      0.48496938673090434,\n",
-       "      0.5011907694834524],\n",
-       "     'pr_auc_score': [0.3285151301926826,\n",
-       "      0.2852982632388624,\n",
-       "      0.15274449616481225,\n",
-       "      0.16431373536461735,\n",
-       "      0.044512199525916715],\n",
-       "     'f_score': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
-       "     'PPVs': [0.4254215304798962, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'NPVs': [0.0,\n",
-       "      0.788586251621271,\n",
-       "      0.8391699092088197,\n",
-       "      0.8404669260700389,\n",
-       "      0.9571984435797666],\n",
-       "     'FPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'FNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
-       "     'FDRs': [0.5745784695201037, 0.0, 0.0, 0.0, 0.0],\n",
-       "     'TPs': [328, 0, 0, 0, 0],\n",
-       "     'TNs': [0, 608, 647, 648, 738],\n",
-       "     'FPs': [443, 0, 0, 0, 0],\n",
-       "     'FNs': [0, 163, 124, 123, 33]},\n",
+       "      0.2490272373540856],\n",
+       "     'roc_auc_score': [0.18136458734790506,\n",
+       "      0.4112851146270584,\n",
+       "      0.3456897841152715,\n",
+       "      0.5531717354210579,\n",
+       "      0.5288248337028825],\n",
+       "     'pr_auc_score': [0.2769722374256113,\n",
+       "      0.17033734181564716,\n",
+       "      0.11497254785684327,\n",
+       "      0.20903177138896742,\n",
+       "      0.04816693871025879],\n",
+       "     'f_score': [0.020565552699228794,\n",
+       "      0.011627906976744186,\n",
+       "      0.08849557522123894,\n",
+       "      0.0,\n",
+       "      0.08240887480190175],\n",
+       "     'TPRs': [0.012195121951219513,\n",
+       "      0.006134969325153374,\n",
+       "      0.08064516129032258,\n",
+       "      0.0,\n",
+       "      0.7878787878787878],\n",
+       "     'TNRs': [0.871331828442438,\n",
+       "      0.9868421052631579,\n",
+       "      0.8578052550231839,\n",
+       "      0.9984567901234568,\n",
+       "      0.22493224932249323],\n",
+       "     'PPVs': [0.06557377049180328,\n",
+       "      0.1111111111111111,\n",
+       "      0.09803921568627451,\n",
+       "      0.0,\n",
+       "      0.043478260869565216],\n",
+       "     'NPVs': [0.543661971830986,\n",
+       "      0.7874015748031497,\n",
+       "      0.8295964125560538,\n",
+       "      0.8402597402597403,\n",
+       "      0.9595375722543352],\n",
+       "     'FPRs': [0.12866817155756208,\n",
+       "      0.013157894736842105,\n",
+       "      0.14219474497681608,\n",
+       "      0.0015432098765432098,\n",
+       "      0.7750677506775068],\n",
+       "     'FNRs': [0.9878048780487805,\n",
+       "      0.9938650306748467,\n",
+       "      0.9193548387096774,\n",
+       "      1.0,\n",
+       "      0.21212121212121213],\n",
+       "     'FDRs': [0.9344262295081968,\n",
+       "      0.8888888888888888,\n",
+       "      0.9019607843137255,\n",
+       "      1.0,\n",
+       "      0.9565217391304348],\n",
+       "     'TPs': [4, 1, 10, 0, 26],\n",
+       "     'TNs': [386, 600, 555, 647, 166],\n",
+       "     'FPs': [57, 8, 92, 1, 572],\n",
+       "     'FNs': [324, 162, 114, 123, 7]},\n",
        "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/predict/inference_statistics_predict.json'}}],\n",
        " 'apiVersion': '0.0.1',\n",
        " 'success': 1,\n",
@@ -676,7 +747,7 @@
        "  'participant_id': 'test_participant_1'}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,6 +761,13 @@
     "    run_id=\"test_run\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
